# tch-models

./: .gitignore  Cargo.toml  README.md  imagenet_val.json
examples/vision/: imagenet_eval.rs
src/: alexnet.rs  efficientnet.rs  googlenet.rs  imagenet.rs  lib.rs  main.rs  maxvit.rs  mnasnet.rs  mobilenet_v2.rs  mobilenet_v3.rs  models.rs  resnet.rs  shufflenet_v2.rs  squeezenet.rs  swin_transformer.rs  util.rs  vgg.rs  vit.rs
src/vision/: alexnet.rs  convnext.rs  densenet.rs  efficientnet.rs  googlenet.rs  imagenet.rs  inception.rs  maxvit.rs  mnasnet.rs  mobilenet_v2.rs  mobilenet_v3.rs  mod.rs  models.rs  regnet.rs  resnet.rs  shufflenet_v2.rs  squeezenet.rs  swin_transformer.rs  vgg.rs  vision_transformer.rs
src/vit/: mod.rs  simple_vit.rs  simple_vit_1d.rs  simple_vit_3d.rs  simple_vit_with_fft.rs  simple_vit_with_patch_dropout.rs  simple_vit_with_qk_norm.rs  simple_vit_with_register_tokens.rs  t2t.rs  twins_svt.rs  vit.rs  vit_1d.rs  vit_3d.rs  vit_for_small_dataset.rs  vit_with_patch_dropout.rs  vit_with_patch_merger.rs  vivit.rs  xcit.rs
